# traveltide-customer-segmentation-rewards

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eda.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/example_run/: README.md
artifacts/example_run/eda/20240101_000000Z/: metadata.yaml  run_log.txt
artifacts/example_run/eda/20240101_000000Z/data/: sessions_clean_sample.csv  users_agg_sample.csv
artifacts/example_run/eda/20240101_000000Z/reports/: eda_report.html
config/: eda.yaml  features.yaml  perks.yaml  segmentation.yaml
data/: README.md  user_perks.csv
data/mart/: customer_perk_assignments.csv
docs/: README.md  audit_repo_alignment.md  data_access.md  definition_of_done.md  mastery_project_instructions.md  release_checklist.md  terminology.md
docs/adr/: ADR-0001-dependencies.md  ADR-0002-cohort-definition.md  ADR-0003-clustering-k.md  ADR-0004-analysis-artifacts.md  ADR-0005-clustering-algorithm.md  README.md
docs/eda/: data-dictionary.md  dq-report.md  outlier-policy.md
docs/step1_exploration/: eda_summary.md  key_findings.md  plots_catalog.md
docs/step2_features_segmentation/: feature_data_dictionary.md  feature_engineering_design.md  tt_017_user_feature_table.md
docs/step3_insights_strategy/: perk_mapping_decision_table.md  segment_personas.md  step3_summary_report.md  strategy_recommendations.md  strategy_validation_checks.md
docs/step4_presentation/: executive_summary.md  final_report.md  measurement_plan.md  slide_deck.md
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_segmentation.ipynb  04_presentation_assets.ipynb
scripts/: ci.py  eda_monitor.ps1  run_eda_with_monitor.ps1  smoke_demo.py
scripts/ops/: eda_monitor.ps1  run_eda_with_monitor.ps1
sql/cohort_2022/: flights.sql  hotels.sql  sessions.sql  users.sql
src/traveltide/: __init__.py  __main__.py  cli.py  pipeline.py
src/traveltide/contracts/: __init__.py  eda.py  features.py
src/traveltide/data/: __init__.py  bronze_loader.py  raw_loader.py  s3_loader.py
src/traveltide/eda/: __init__.py  clustering_explore.py  config.py  dq_report.py  extract.py  pipeline.py  preprocess.py  report.py  transform_experiments.py  workflow.py
src/traveltide/eda/templates/: eda_report.html.j2
src/traveltide/features/: __init__.py  aggregate.py  pipeline.py  schema.py  user_features.py
src/traveltide/perks/: __init__.py  mapping.py
src/traveltide/reports/: __init__.py  executive_summary.py  final_report.py
src/traveltide/segmentation/: __init__.py  evaluation.py  pipeline.py  run.py  visuals.py
src/traveltide_customer_segmentation_rewards.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_contracts_eda.py  test_dq_report.py  test_eda_aggregation.py  test_eda_config.py  test_segmentation_evaluation.py  test_segmentation_pipeline.py  test_smoke.py
tests/data/: test_bronze_loader.py  test_raw_loader.py  test_s3_loader.py
tests/features/: test_pipeline.py
tests/perks/: test_mapping.py
tests/segmentation/: test_run.py
