# pyproject.toml
# Purpose / Rationale:
# This file is the central, standardized configuration for a Python project.
# It defines (a) how the project is built and installed (build system),
# (b) core project metadata and runtime requirements (packaging),
# and (c) tool-specific configuration (e.g. setuptools, linters, test tools).
# The goal is reproducible builds, clean installs (including editable installs),
# and a single source of truth for packaging and CLI entry points.

[build-system]
# requires: Build-time dependencies required to build and install the project (PEP 517 / PEP 518).
requires = ["setuptools>=68", "wheel"]
# build-backend: The backend responsible for performing the build and installation steps.
build-backend = "setuptools.build_meta"

[project]
# name: The canonical project/package name used for installation and distribution.
name = "traveltide-customer-segmentation-rewards"
# version: Project version (semantic versioning recommended); used for releases and traceability.
version = "0.1.0"
# requires-python: Minimum supported Python version; prevents installation on incompatible interpreters.
requires-python = ">=3.12"
# dependencies: Runtime dependencies automatically installed alongside this project.
dependencies = []

[tool.setuptools]
# package-dir: Maps the package root to the src/ directory (src-layout best practice).
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# where: Directories in which setuptools searches for Python packages.
where = ["src"]

[project.scripts]
# Console script entry point: creates an executable `traveltide` command after installation.
# Format: <command> = "<module path>:<callable>"
traveltide = "traveltide.cli:main"

# =========================
# Ruff (lint + format)
# =========================
# Single source of truth for code quality in both local development and CI.
# CI runs:
#   - python -m ruff check .
#   - python -m ruff format --check .
# Local auto-fix / format:
#   - python -m ruff check . --fix
#   - python -m ruff format .

[tool.ruff]
target-version = "py312"
line-length = 88

# Avoid linting/formatting non-source outputs or large binary-ish artifacts.
extend-exclude = [
  "artifacts/",
  "docs/step1_exploration/",
  "docs/step2_features_segmentation/",
  "docs/step3_insights_strategy/",
  "docs/step4_presentation/",
  "notebooks/",
]

[tool.ruff.lint]
# Conservative baseline that catches real defects and enforces deterministic imports.
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import ordering)
]

# When using Ruff's formatter, do not also enforce line length via E501.
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["traveltide"]

[tool.ruff.format]
# Keep defaults explicit to prevent drift if Ruff defaults change.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

